--- a/simple_login.html
+++ b/simple_login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login.css">
     <script src="js/login.js"></script>
     <title>Login Form</title>
 </head>
